[project]
name = "stock-ai-trade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.7",
    "yfinance>=0.2.65",
]

[tool.uv.workspace]
members = [
    "tools/pdf-reader",
    "tools/csv-visualizer",
    "tools/yahoo-finance-client",
]
