[project]
name = "yahoo-finance-client"
version = "0.1.0"
description = "Yahoo Finance API client for Japanese stock data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.65",
    "pandas>=2.0.3",
    "click>=8.0.0",
]

[project.scripts]
yahoo-finance-client = "yahoo_finance_client.main:main"